# medusa-platform

./: .gitignore  medusa-platform.code-workspace  medusa.bat  medusa_interactive_notebook.ipynb  pyproject.toml
.cursor/plans/: alt+drag_duplicate_plot_config_1c0fc3c1.plan.md  duplicate_plot_config_tab_f1e6dd42.plan.md  medusa_path_layout_fixes_34c06b65.plan.md
.cursor/rules/: derived-cursor-rules.mdc
.specstory/: .gitignore
.specstory/history/: 2026-02-06_00-05Z-pyproject-toml-and-uv-project-structure.md  2026-02-06_13-58Z-new-pink-theme-for-workspace.md  2026-02-06_16-17Z-medusa-platform-package-structure.md  2026-02-06_19-15Z-medusa-platform-terminal-log-section.md  2026-02-06_22-39Z-plots-panel-off-by-one-error.md  2026-02-06_23-50Z-medusa-app-layout-and-responsibilities.md  2026-02-09_12-57Z-plot-config-tab-duplication.md
accounts/: accounts  session
accounts/MiceMan/: gui_config.json
scripts/: launch_PyQtInspect.py
src/gui/: style.css
src/gui/apps_panel/: apps_panel.py
src/gui/lsl_config/: lsl_config.py
src/gui/plots_panel/: plots_panel_config.py  real_time_plots.py
src/medusa_platform/: __init__.py  app_manager.py  constants.py  main.py  resources.py
src/medusa_platform/gui/: __init__.py  gui_utils.py  main_window.py
src/medusa_platform/gui/apps_panel/: apps_panel.py
src/medusa_platform/gui/create_app/: create_app.py
src/medusa_platform/gui/log_panel/: log_panel.py
src/medusa_platform/gui/lsl_config/: lsl_config.py
src/medusa_platform/gui/plots_panel/: plots_panel.py  plots_panel_config.py  real_time_plots.py
src/medusa_platform/gui/qt_widgets/: dialogs.py
src/medusa_platform/gui/settings/: gui_settings.ui
src/medusa_platform/gui/studies_panel/: studies_panel.py
src/medusa_platform/gui/ui_files/: plot_config_dialog.ui
src/medusa_platform/gui/user_profile/: login.py  user_profile.py
